Add recursive to swagger
